syntax = "proto3";

package containerd.services.events.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/containerd/containerd/api/services/events/v1;events";

message ContainerCreate {
	string container_id = 1;
	string image = 2;
	message Runtime {
		string name = 1;
		map<string, string> options = 2;
	}
	Runtime runtime = 3;
}

message ContainerUpdate {
	string container_id = 1;
	string image = 2;
	map<string, string> labels  = 3;
	string rootfs = 4 [(gogoproto.customname) = "RootFS"];
}

message ContainerDelete {
	string container_id = 1;
	string image = 2;
}
